objects/Proposal_Request__c.object
<CustomObject>
    <fields>
        <fullName>Utility_Rate__c</fullName>
        <formula>TEXT(Opportunity__r.Utility_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Utility Rate on the Opportunity</inlineHelpText>
        <label>Utility Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <formula>TEXT(Opportunity__r.Utility_Company__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Utility Company on the Opportunity</inlineHelpText>
        <label>Utility Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Market__c</fullName>
        <label>Vertical Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Schools</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Provisions__c</fullName>
        <inlineHelpText>Describe any warranty provisions if they exist- if none exist, enter N/A</inlineHelpText>
        <label>Warranty Provisions</label>
        <type>TextArea</type>
    </fields>
    <label>Proposal Request</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Proposal Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Requests</pluralLabel>
    <recordTypes>
        <fullName>RFP_Response</fullName>
        <active>true</active>
        <description>RFP Request- Includes Slice and Dice for RFP&apos;s</description>
        <label>RFP Response</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFQ</fullName>
        <active>true</active>
        <description>RFQ Response- includes Slice and Dice for RFQ&apos;s</description>
        <label>RFQ Response</label>
    </recordTypes>
    <recordTypes>
        <fullName>Slice_and_Dice</fullName>
        <active>true</active>
        <description>Slice and Dice an RFP</description>
        <label>Slice and Dice</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Proposal</fullName>
        <active>true</active>
        <description>Request for Standard Proposal, not RFP</description>
        <label>Standard Proposal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CapturePlanRequired</fullName>
        <active>true</active>
        <description>Capture plan location is required if check box is checked</description>
        <errorConditionFormula>AND(Capture_Plan_Ready_for_Review__c = TRUE,  ISBLANK( Capture_Plan_Location__c )= TRUE)</errorConditionFormula>
        <errorDisplayField>Capture_Plan_Location__c</errorDisplayField>
        <errorMessage>Enter the link to the Capture Plan. Capture Plan Location is required if &quot;Capture Plan Ready for Review&quot; is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Required</fullName>
        <active>true</active>
        <description>Contact is required when Sales Associate is submitting</description>
        <errorConditionFormula>AND(ISPICKVAL(Sales_Associate_Submit__c, &quot;Yes&quot;), Contact__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>Please Enter a Contact where the Sales Associate will submit the Proposal or RFP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Level_Request</fullName>
        <active>true</active>
        <description>If requesting a different Level than 1 or 2</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( Level_Requested__c , &quot;Other&quot;)), Other_Level__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please fill out the other level requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RFP_Location_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(RFP_Location__c , &quot;Other&quot;) , ISPICKVAL( RFP_Location__c , &quot;website&quot;)), RFP_Location_Info__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please list the website or alternate location of the RFP</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Associate_Submit_Mailing_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Submittal_Method__c, &quot;Direct Mailing&quot;), Mailing_Address__c =&quot;&quot;)</errorConditionFormula>
        <errorMessage>Please enter a mailing address for the Sales Associate to submit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Associate_Submit_Method</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Sales_Associate_Submit__c, &quot;Yes&quot;), (ISPICKVAL(Submittal_Method__c, &quot;&quot;)))</errorConditionFormula>
        <errorMessage>Please choose a method of submittal for the Sales Associate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submittal_Method_is_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(  Submittal_Method__c  , &quot;Other&quot;)),   Submittal_Method_Other__c   = &quot;&quot;)</errorConditionFormula>
        <errorMessage>Please list a Submittal Method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Zone_Deadline_for_Questions</fullName>
        <active>true</active>
        <description>Reminds user to populate an appropriate time zone for the Date above, Deadline for Questions</description>
        <errorConditionFormula>NOT(ISBLANK( Deadline_for_Questions__c ))&amp;&amp;
(ISBLANK(TEXT(Time_Zone_Deadline_for_Questions__c )))</errorConditionFormula>
        <errorDisplayField>Deadline_for_Questions__c</errorDisplayField>
        <errorMessage>Please select an appropriate time zone for Deadline for Questions date field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Zone_Due_Date_Required</fullName>
        <active>true</active>
        <description>Reminds User to populate a Time Zone specific to the Due Date field</description>
        <errorConditionFormula>NOT(ISBLANK( Due_Date__c ))&amp;&amp;
(ISBLANK(TEXT( Due_Date__c )))</errorConditionFormula>
        <errorDisplayField>Time_Zone_Due_Date__c</errorDisplayField>
        <errorMessage>Please enter the appropriate Time Zone for the Due Date above</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Zone_Review_Session_End_Date</fullName>
        <active>true</active>
        <description>Prompts user to select appropriate time zone related to the Review Session End Date</description>
        <errorConditionFormula>NOT(ISBLANK(Review_Session_End_Date__c))&amp;&amp;
(ISBLANK(TEXT( Review_Session_End_Date__c)))</errorConditionFormula>
        <errorDisplayField>Review_Session_End_Date__c</errorDisplayField>
        <errorMessage>Please select appropriate time zone for the Review Session End Date field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Zone_Site_Visit_PreBid_Meeting</fullName>
        <active>true</active>
        <description>Prompts user to select appropriate time zone for field above:  Site Visit.</description>
        <errorConditionFormula>NOT(ISBLANK( Site_Visit_Pre_Bid_Meeting__c))&amp;&amp;
(ISBLANK(TEXT( Site_Visit_Pre_Bid_Meeting__c)))</errorConditionFormula>
        <errorDisplayField>Site_Visit_Pre_Bid_Meeting__c</errorDisplayField>
        <errorMessage>Please select appropriate time zone for Site Visit/Pre Bid Meeting field.</errorMessage>
    </validationRules>
</CustomObject>